<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_green"
    tools:context="com.fpi.biometricsystem.StaffRegistrationFragment">

    <ImageView
        android:id="@+id/arrow_back_btn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="Student Registration"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrow_back_btn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:id="@+id/tvDevStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tv_ready"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFpStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tv_ready"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFpType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tv_ready"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFpStatus" />

            <TextView
                android:id="@+id/staff_fn_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="70dp"
                android:text="@string/student_file_number"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/staff_no_et"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/student_file_number"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:paddingHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/staff_fn_tv" />

            <TextView
                android:id="@+id/first_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/first_name"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/staff_no_et" />

            <EditText
                android:id="@+id/first_name_et"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/first_name"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:enabled="false"
                android:paddingHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/first_name_tv"
                app:layout_constraintStart_toEndOf="@id/first_name_tv"
                app:layout_constraintTop_toTopOf="@id/first_name_tv" />

            <TextView
                android:id="@+id/last_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/last_name"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_name_et" />

            <EditText
                android:id="@+id/last_name_et"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/last_name"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:enabled="false"
                android:paddingHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/last_name_tv"
                app:layout_constraintBottom_toBottomOf="@id/last_name_tv"
                app:layout_constraintTop_toTopOf="@id/last_name_tv" />


            <TextView
                android:id="@+id/department_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/department"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/last_name_et" />

            <EditText
                android:id="@+id/department_et"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/department"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:enabled="false"
                android:paddingHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/department_tv"
                app:layout_constraintStart_toEndOf="@id/department_tv"
                app:layout_constraintTop_toTopOf="@id/department_tv" />

            <TextView
                android:id="@+id/level_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/level"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/department_et" />

            <EditText
                android:id="@+id/level_et"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/level"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:enabled="false"
                android:paddingHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/level_tv"
                app:layout_constraintBottom_toBottomOf="@id/level_tv"
                app:layout_constraintTop_toTopOf="@id/level_tv" />

            <Button
                android:id="@+id/enrol_btn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="100dp"
                android:layout_marginTop="70dp"
                android:backgroundTint="#F5BA75"
                android:text="Save &amp; Continue"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/fingerprint_smaller"
                app:layout_constraintStart_toStartOf="@id/level_et"
                app:layout_constraintEnd_toEndOf="@id/level_et"
                app:layout_constraintTop_toBottomOf="@id/level_et"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/finger_print_views"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:constraint_referenced_ids="fifth_fingerprint_iv, fifth_fingerprint_iv_bg, fourth_fingerprint_iv, fourth_fingerprint_iv_bg, third_fingerprint_iv, third_fingerprint_iv_bg, first_name_tv, first_name_et, last_name_tv, last_name_et, department_tv, department_et, level_tv, level_et, captureBtn, actual_left_fingerprint_iv, actual_right_fingerprint_iv, right_fingerprint_iv_bg, left_fingerprint_iv_bg, fingerprint_bg,"/>
            <View
                android:id="@+id/fingerprint_bg"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="36dp"
                android:background="@color/buttery_plain"
                app:layout_constraintTop_toBottomOf="@id/level_et" />

            <View
                android:id="@+id/left_fingerprint_iv_bg"
                android:layout_width="60dp"
                android:layout_height="78dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/fingerprint_rect_bg"
                app:layout_constraintBottom_toBottomOf="@+id/fingerprint_bg"
                app:layout_constraintEnd_toStartOf="@id/right_fingerprint_iv_bg"
                app:layout_constraintStart_toStartOf="@+id/fingerprint_bg"
                app:layout_constraintTop_toTopOf="@id/fingerprint_bg" />

            <View
                android:id="@+id/right_fingerprint_iv_bg"
                android:layout_width="60dp"
                android:layout_height="78dp"
                android:background="@drawable/fingerprint_rect_bg"
                app:layout_constraintBottom_toBottomOf="@+id/fingerprint_bg"
                app:layout_constraintEnd_toStartOf="@id/third_fingerprint_iv_bg"
                app:layout_constraintStart_toEndOf="@+id/left_fingerprint_iv_bg"
                app:layout_constraintTop_toTopOf="@id/fingerprint_bg" />

            <View
                android:id="@+id/third_fingerprint_iv_bg"
                android:layout_width="60dp"
                android:layout_height="78dp"
                android:background="@drawable/fingerprint_rect_bg"
                app:layout_constraintBottom_toBottomOf="@+id/fingerprint_bg"
                app:layout_constraintEnd_toStartOf="@id/fourth_fingerprint_iv_bg"
                app:layout_constraintStart_toEndOf="@+id/right_fingerprint_iv_bg"
                app:layout_constraintTop_toTopOf="@id/fingerprint_bg" />

            <View
                android:id="@+id/fourth_fingerprint_iv_bg"
                android:layout_width="60dp"
                android:layout_height="78dp"
                android:background="@drawable/fingerprint_rect_bg"
                app:layout_constraintBottom_toBottomOf="@+id/fingerprint_bg"
                app:layout_constraintEnd_toStartOf="@id/fifth_fingerprint_iv_bg"
                app:layout_constraintStart_toEndOf="@+id/third_fingerprint_iv_bg"
                app:layout_constraintTop_toTopOf="@id/fingerprint_bg" />

            <View
                android:id="@+id/fifth_fingerprint_iv_bg"
                android:layout_width="60dp"
                android:layout_height="78dp"
                android:background="@drawable/fingerprint_rect_bg"
                app:layout_constraintBottom_toBottomOf="@+id/fingerprint_bg"
                app:layout_constraintEnd_toEndOf="@id/fingerprint_bg"
                app:layout_constraintStart_toEndOf="@+id/fourth_fingerprint_iv_bg"
                app:layout_constraintTop_toTopOf="@id/fingerprint_bg" />

            <ImageView
                android:id="@+id/actual_left_fingerprint_iv"
                android:layout_width="52dp"
                android:layout_height="72dp"
                android:src="@drawable/fingerprint"
                app:layout_constraintBottom_toBottomOf="@+id/left_fingerprint_iv_bg"
                app:layout_constraintEnd_toEndOf="@+id/left_fingerprint_iv_bg"
                app:layout_constraintStart_toStartOf="@+id/left_fingerprint_iv_bg"
                app:layout_constraintTop_toTopOf="@+id/left_fingerprint_iv_bg" />

            <ImageView
                android:id="@+id/actual_right_fingerprint_iv"
                android:layout_width="52dp"
                android:layout_height="72dp"
                android:src="@drawable/fingerprint"
                app:layout_constraintBottom_toBottomOf="@+id/right_fingerprint_iv_bg"
                app:layout_constraintEnd_toEndOf="@+id/right_fingerprint_iv_bg"
                app:layout_constraintStart_toStartOf="@+id/right_fingerprint_iv_bg"
                app:layout_constraintTop_toTopOf="@+id/right_fingerprint_iv_bg" />

            <ImageView
                android:id="@+id/third_fingerprint_iv"
                android:layout_width="52dp"
                android:layout_height="72dp"
                android:src="@drawable/fingerprint"
                app:layout_constraintBottom_toBottomOf="@+id/third_fingerprint_iv_bg"
                app:layout_constraintEnd_toEndOf="@+id/third_fingerprint_iv_bg"
                app:layout_constraintStart_toStartOf="@+id/third_fingerprint_iv_bg"
                app:layout_constraintTop_toTopOf="@+id/third_fingerprint_iv_bg" />

            <ImageView
                android:id="@+id/fourth_fingerprint_iv"
                android:layout_width="52dp"
                android:layout_height="72dp"
                android:src="@drawable/fingerprint"
                app:layout_constraintBottom_toBottomOf="@+id/fourth_fingerprint_iv_bg"
                app:layout_constraintEnd_toEndOf="@+id/fourth_fingerprint_iv_bg"
                app:layout_constraintStart_toStartOf="@+id/fourth_fingerprint_iv_bg"
                app:layout_constraintTop_toTopOf="@+id/fourth_fingerprint_iv_bg" />

            <ImageView
                android:id="@+id/fifth_fingerprint_iv"
                android:layout_width="52dp"
                android:layout_height="72dp"
                android:src="@drawable/fingerprint"
                app:layout_constraintBottom_toBottomOf="@+id/fifth_fingerprint_iv_bg"
                app:layout_constraintEnd_toEndOf="@+id/fifth_fingerprint_iv_bg"
                app:layout_constraintStart_toStartOf="@+id/fifth_fingerprint_iv_bg"
                app:layout_constraintTop_toTopOf="@+id/fifth_fingerprint_iv_bg" />

            <Button
                android:id="@+id/captureBtn"
                android:layout_width="400dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#F5BA75"
                android:text="Upload Registration"
                android:textColor="@color/black"
                android:layout_marginBottom="100dp"
                android:drawableEnd="@drawable/fingerprint_smaller"
                app:layout_constraintStart_toStartOf="@id/level_et"
                app:layout_constraintEnd_toEndOf="@id/level_et"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fingerprint_bg"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>